minor ui, slight progress on calendar

--- a/components/rentals/rental_calendar.jade
+++ b/components/rentals/rental_calendar.jade
@@ -1,8 +1,9 @@
 template(name='rental_calendar')
     .ui.header calendar
     #menu
-        .ui.button.move-today today
-        .ui.button.create_schedules +
+        .ui.button.move_today today
+        .ui.button.move_now now
+        .ui.large.icon.button.create_schedules +
         .ui.icon.button.prev_view
             i.chevron.left.icon
         .ui.icon.button.next_view
