--- a/components/rentals/res_edit.jade
+++ b/components/rentals/res_edit.jade
@@ -18,36 +18,34 @@ template(name='reservation_edit')
                         strong #{rental.title}
                         small reservation
                     with rental
-                        .ui.inline.header $#{hourly_dollars}
+                        .ui.inline.header #{hourly_dollars}c
                             small /hr
                         |&nbsp;
                         |&nbsp;
-                        .ui.inline.header $#{daily_dollars}
+                        .ui.inline.header #{daily_dollars}c
                             small /day
                         +image_view key='image' label='image' direct=true classes='ui rounded image'
                     .result_column   
                         .ui.big.list
                             .item
-                                +i name='payroll'
+                                i.user.shield.icon
                                 small 50% owner
-                                |$#{owner_payout} to #{rental.owner_username}
+                                | #{owner_payout}c to #{rental.owner_username}
                             .item.handler
-                                +i name='get-cash'
+                                i.user.cog.icon
                                 small 45% handler
-                                | $#{handler_payout} to #{rental.handler_username}
+                                | #{handler_payout}c to #{rental.handler_username}
                             .item 
-                                +i name='tax'
                                 small 5% taxes
-                                | $#{taxes_payout}
+                                | #{taxes_payout}c
                 
                 .column 
                     a.ui.header(href="/rental/#{rental._id}/view") reserve #{rental.title}
                     .ui.fluid.button.reserve_now(class=now_button_class)
-                        +i name='present'
                         |reserve now
                     unless now
                         .ui.header 
-                            +i name='date-to' classes='ui tiny inline image'
+                            i.calendar.icon
                             |start date/time
                         .ui.input
                             input.res_start(type='datetime-local' value="#{start_datetime}")
@@ -58,7 +56,7 @@ template(name='reservation_edit')
                         .ui.input            
                             input.other_hour(type='number' min='0' value=hour_duration autocomplete="off")
                         .ui.header 
-                            +i name='date-from'    
+                            i.calendar.icon
                             |end date/time            
                         .ui.input
                             input.res_end(type='datetime-local' value="#{end_datetime}")
@@ -72,12 +70,7 @@ template(name='reservation_edit')
                                 small to
                                 |{{cal_time end_datetime}}
                             .ui.header 
-                                +i name='money' classes='ui tiny inline image'
-                                | #{hour_duration}
-                                small hrs * $
-                                |#{rental.hourly_dollars}
-                                small /hr = $
-                                |#{cost}
+                                | #{hour_duration}hrs * #{rental.hourly_dollars}c/hr = #{cost}
                             .ui.header(title='security deposit amount will be held until successful return') 
                                 if rental.security_deposit_required
                                     small + security deposit 
@@ -99,7 +92,7 @@ template(name='reservation_edit')
                                     small your balance
                                     |{{fixed currentUser.credit}} 
                                 .ui.header
-                                    small deductions
+                                    small
                                     //- | -  #{cost} 
                                     | -  #{total_cost} 
                                     if res_start_dropoff_selected
@@ -114,7 +107,6 @@ template(name='reservation_edit')
                             else if need_credit
                                 .ui.header need credit
                                 .ui.header 
-                                    small your balance
                                     |{{fixed currentUser.credit}} 
                                 .ui.header
                                     small cost
@@ -131,23 +123,20 @@ template(name='reservation_edit')
                     unless submitted
                         if can_buy
                             .ui.big.green.fluid.button.submit_reservation(class=submit_button_class)
-                                +i name='paid'        
-                                |submit and pay
+                                |pay
                         else if need_credit
                             .ui.header #{member_balance_after_reservation} credit needed to purchase
                             .ui.inline.header add 
                             .ui.inline.input
                                 input.adding_credit(type='number' value=member_balance_after_reservation) 
                             .ui.big.teal.fluid.button.add_credit(class=submit_button_class)
-                                +i name='online-money-transfer'        
+                                i.plus.icon
                                 |add credit to reserve
                         else if need_approval
                             .ui.big.teal.fluid.button.request_reservation(class=submit_button_class)
-                                +i name='paid'        
                                 |request reservation
                         else
                             .ui.big.disabled.fluid.button.send_message(title='cannot reserve for other reason')
-                                +i name='ban'
                                 |send message
                     else
                         .ui.header submitted {{ from_now submitted_timestamp }}
