--- a/components/admin/global_stats.jade
+++ b/components/admin/global_stats.jade
@@ -29,17 +29,17 @@ template(name='global_stats')
                 small services
             .item 
                 small total reservation revenue
-                | $#{total_reservation_revenue}
+                | #{total_reservation_revenue}c
             .item 
                 small total owner revenue
-                | $#{total_owner_revenue}
+                | #{total_owner_revenue}c
             .item 
                 small total handler revenue
-                | $#{total_handler_revenue}
+                | #{total_handler_revenue}c
             .item 
                 small total tax revenue
-                | $#{total_tax_revenue}
-            .item $#{total_payment_amount}
+                | #{total_tax_revenue}c
+            .item #{total_payment_amount}c
                 small in payments
             .item #{product_count} 
                 small products
