--- a/components/rentals/rental_view.jade
+++ b/components/rentals/rental_view.jade
@@ -2,33 +2,14 @@ template(name='sort_item')
     .item.set_sort #{label}
     
 
-template(name='rental_cloud')
-    div
-    //- #cloud
-        //- .ui.left.icon.input
-        //-     i.search.icon
-        //-     +inputAutocomplete settings=settings id="search" class="" autocomplete="off" 
-        // .ui.hidden.fitted.divider
-    //- i.grey.tags.icon
-    //- .ui.inline.header tags
-    if selected_rental_tags
-        #clear_tags.ui.active.icon.circular.button
-            i.remove.icon
-        each selected_rental_tags
-            .unselect_rental_tag.ui.active.circular.button
-                strong #{this}
-    each all_rental_tags
-        .ui.compact.circular.button.select_rental_tag(class=cloud_tag_class) 
-            strong #{this.name}
-
 
 template(name='rental_view')
     with current_doc
         .ui.stackable.padded.grid
             //- img.ui.large.rounded.image(src="{{c.url image width=500 height=500 gravity='face' crop='fill'}}")
-            .row
-                .sixteen.wide.column
-                    +rental_calendar
+            //- .row
+            //-     .sixteen.wide.column
+            //-         +rental_calendar
             .row
                 .four.wide.column
                     a.ui.fluid.button(href='/' title='rentals')
@@ -38,20 +19,12 @@ template(name='rental_view')
                     .ui.large.center.aligned.inline.header #{title}
                     +rental_status
                     .ui.header 
-                        |$#{hourly_dollars}
+                        |#{hourly_dollars}c
                         small /hr standard rate
                     if security_deposit_required
                         .ui.header 
-                            |$#{security_deposit_amount}
+                            |#{security_deposit_amount}c
                             small security deposit
-                        
-                    //- .ui.header 
-                    //-     |$#{minimum_bid}
-                    //-     small /hr minimum bid
-                    //- .ui.header 
-                    //-     |#{auction_cutoff_hours}hr
-                    //-     small auction cutoff
-            
                     img.ui.centered.rounded.medium.invert.image(src="{{c.url image width=400 height=400 crop='fit'}}")
                     if can_edit
                         a.ui.fluid.button(href="/rental/#{_id}/edit")
@@ -98,8 +71,8 @@ template(name='rental_stats')
     .ui.big.list
         .item #{views} views
         .item #{reservation_count} reservations
-        .item $#{total_earnings}/#{total_rental_hours}hrs total
-        .item $#{average_rental_cost}/ #{average_rental_duration}hrs avg rental
+        .item #{total_earnings}c/#{total_rental_hours}hrs total
+        .item #{average_rental_cost}c / #{average_rental_duration}hrs avg rental
         //- .item rental ranking # reservations
         //- .item rental ranking $ earned
         //- .item # different renters
@@ -130,134 +103,82 @@ template(name='reserve_button')
             |reserve
             //- +i name='play' classes='ui inline mini image'
 
-
-
-template(name='rental_card')
-    .ui.card
-        if image
-            a(href="/rental/#{_id}/view")
-                img.ui.rounded.image(src="{{c.url image width=400 height=400 crop='lpad'}}")
-        .content
-            a.ui.inline.header.log_view(href="/rental/#{_id}/view") #{title} 
-                if hourly_dollars
-                    .ui.basic.label $#{hourly_dollars}/hr
-                if daily_dollars
-                    .ui.basic.label $#{daily_dollars}/day
-            +rental_status
-        .content
-            if security_deposit_required
-                i.lock.grey.icon
-                //- +i name='safe-in'
-                |$#{security_deposit_amount} security deposit
-            div(title='public location tags, private will be shown to renters')
-                //- +ismall name='marker'
-                i.marker.grey.icon
-                each public_location_tags
-                    .ui.basic.label #{this}
-            div
-            i.grey.tag.icon
-            //- +ismall name='tags'
-            each tags
-                .ui.basic.label #{this}
-            //- div
-            //- +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' add_label='bookmark' remove_label='unbookmark'  big=true
-            //- +voting
-            div
-            //- if currentUser
-            //-     if can_edit
-            //-         a.ui.button(href="/rental/#{_id}/edit")
-            //-             i.pencil.icon
-            //-             |edit
-            //- a.ui.button(href="/rental/#{_id}/view")
-            //-     |view
-            //-     i.right.chevron.icon
-            //- +author_info
-            +reserve_button
-
-
-template(name='rental_segment')
-    .ui.fluid.segment.stackable.grid
-        .row
-            .sixteen.wide.column
-                a.ui.inline.header.log_view(href="/rental/#{_id}/view") #{title} 
-                    if hourly_dollars
-                        .ui.basic.label $#{hourly_dollars}/hr
-                    if daily_dollars
-                        .ui.basic.label $#{daily_dollars}/day
-                +rental_status
-        .row
-            .four.wide.column
-                if image
-                    a.zoom(href="/rental/#{_id}/view")
-                        +image_view key='image' direct=true classes='zoom'
-            .eight.wide.column
-                if security_deposit_required
-                    i.lock.grey.icon
-                    //- +i name='safe-in'
-                    |$#{security_deposit_amount} security deposit
-                div(title='public location tags, private will be shown to renters')
-                    //- +ismall name='marker'
-                    i.marker.grey.icon
-                    each public_location_tags
-                        .ui.basic.label #{this}
-                div
-                i.grey.tag.icon
-                //- +ismall name='tags'
-                each tags
-                    .ui.basic.label #{this}
-                //- div
-                //- +user_list_toggle key='bookmark_ids' add_icon='bookmark outline' remove_icon='bookmark' add_label='bookmark' remove_label='unbookmark'  big=true
-                //- +voting
-                div
-                //- if currentUser
-                //-     if can_edit
-                //-         a.ui.button(href="/rental/#{_id}/edit")
-                //-             i.pencil.icon
-                //-             |edit
-                //- a.ui.button(href="/rental/#{_id}/view")
-                //-     |view
-                //-     i.right.chevron.icon
-                //- +author_info
-                +reserve_button
-            .four.wide.column
-                .ui.list
-                    .item #{views} views
-                    .item #{reservation_count} reservations
-                    .item $#{total_earnings} earned
-                    .item #{total_rental_hours} reserved hours
-                    .item $#{average_rental_cost}/#{average_rental_duration}hr avg rental
-                +single_user_view key='owner_username' label='owner' direct=true
-                +single_user_view key='handler_username' label='handler' direct=true
-
-
 template(name='rental_view_reservations')
     .ui.header 
-        +i name='clock'
+        i.clock.icon
         |reservations
-    .ui.bulleted.link.list
+    .ui.icon.button.set_card_view
+        i.clone.icon
+    .ui.icon.button.set_segment_view
+        i.list.icon
+    .ui.simple.dropdown
+        |sort by
+        |#{current_sort}
+        i.dropdown.icon
+        .menu
+            +sort_item key='most_expensive' label='most expensive' direction='-1'
+            +sort_item key='_timestamp' label='newest' direction='-1'
+            +sort_item key='reservation_count' label='most rented' direction='1'
+            +sort_item key='points' label='most rented' direction='1'
+    div
+    |available
+    +set_date_filter key='today' label='today'
+    +set_date_filter key='tomorrow' label='tomorrow'
+    +set_date_filter key='this_weekend' label='this weekened'
+    
+    .ui.hidden.divider
+    if view_res_cards
+        .ui.stackable.three.cards
+            each reservations
+                +res_card
+    else if view_res_segments
         each reservations
-            +reservation_list_item
+            +reservation_segment
+        
+template(name='set_date_filter')        
+    .ui.button.set_date_filter(class=date_filter_class)
+        |#{label}
+        
+        
 
-
-
-template(name='reservation_list_item')
+template(name='reservation_segment')
     .ui.segment
         a.ui.small.header.inline.lowercase(href="/reservation/#{_id}/view")
             small from 
             |{{cal_time start_datetime}}
             //- |{{cal_time start_datetime}} [#{start_date}, hour: #{start_hour}]
             //- |{{long_date start_datetime}}
-        a.ui.small.header.lowercase(href="/reservation/#{_id}/view")
             small to 
             |{{cal_time end_datetime}}
         div
-        .ui.button.calc_res_numbers
-            |calc res numbers
-        .ui.grey.inline.header #{hour_duration} hrs
+        .ui.grey.inline.header #{hour_duration}hrs
         .ui.grey.inline.header(title='credits')
             //- i.coins.icon
-            | $#{cost}
+            | #{cost}c
         .ui.small.header #{when} by #{_author_username}
         a.ui.large.fluid.button(href="/reservation/#{_id}/view")
             |view
             i.right.chevron.icon
+                
+                
+                
+                
+template(name='res_card')
+    .ui.card
+        .content
+            a.ui.small.header.inline.lowercase(href="/reservation/#{_id}/view")
+                small from 
+                |{{cal_time start_datetime}}
+                //- |{{cal_time start_datetime}} [#{start_date}, hour: #{start_hour}]
+                //- |{{long_date start_datetime}}
+                small to 
+                |{{cal_time end_datetime}}
+            div
+            .ui.grey.inline.header #{hour_duration} hrs
+            .ui.grey.inline.header(title='credits')
+                //- i.coins.icon
+                | #{cost}c
+            .ui.small.header #{when} by #{_author_username}
+            a.ui.large.fluid.button(href="/reservation/#{_id}/view")
+                |view
+                i.right.chevron.icon
