add much pm, chat, courses, projects, work, person, votes, answers, questions, tests

--- a/client/blocks.jade
+++ b/client/blocks.jade
@@ -550,7 +550,7 @@ template(name='suggestion_box')
                 +textarea_edit key='content' direct=true
                 +boolean_edit key='public' direct=true
         .actions    
-            .ui.deny.circular.button cancel
-            .ui.green.positive.labeled.icon.circular.button
+            .ui.deny.button cancel
+            .ui.green.positive.labeled.icon.button
                 i.checkmark.icon
                 |submit
