--- a/client/home.jade
+++ b/client/home.jade
@@ -4,82 +4,77 @@ template(name='home')
         a.ui.card(href="/alpha")
             .content 
                 .ui.icon.grey.header
-                    i.mountain.icon
+                    i.grey.mountain.icon
                     | alpha
         a.ui.card(href="/m/model")
             .content 
                 .ui.icon.grey.header 
-                    i.shapes.icon
+                    i.grey.shapes.icon
                     |delta
+        a.ui.card(href="/minutes")
+            .content 
+                .ui.icon.grey.header 
+                    i.grey.shapes.icon
+                    |minutes
         a.ui.card(href="/tests")
             .content 
                 .ui.icon.grey.header
-                    i.edit.icon
+                    i.grey.edit.icon
                     | tests
+        a.ui.card(href="/gallery")
+            .content 
+                .ui.icon.grey.header
+                    i.grey.edit.icon
+                    | gallery
         a.ui.card(href="/rentals")
             .content 
                 .ui.icon.grey.header 
-                    i.hand.holding.usd.icon
+                    i.grey.hand.holding.usd.icon
                     | rentals
-        a.ui.card(href="/deals")
-            .content 
-                .ui.icon.grey.header
-                    i.exchange.icon
-                    | deals
         a.ui.card(href="/chat")
             .content 
                 .ui.icon.grey.header
-                    i.comment.outline.icon
+                    i.grey.comment.outline.icon
                     | chat
         a.ui.card(href="/events")
             .content 
                 .ui.icon.grey.header
-                    i.calendar.icon
+                    i.grey.calendar.icon
                     | events
         a.ui.card(href="/bounty")
             .content 
                 .ui.icon.grey.header
-                    i.money.icon
+                    i.grey.money.icon
                     | bounty
         a.ui.card(href="/posts")
             .content 
                 .ui.icon.grey.header
-                    i.blog.icon
+                    i.grey.blog.icon
                     | posts
         a.ui.card(href="/alerts")
             .content 
                 .ui.icon.grey.header
-                    i.bell.outline.icon
+                    i.grey.bell.outline.icon
                     | alerts
         a.ui.card(href="/users")
             .content 
                 .ui.icon.grey.header
-                    i.users.icon
+                    i.grey.users.icon
                     |users
-        a.ui.card(href="/m/reddit")
-            .content 
-                .ui.icon.grey.header
-                    i.reddit.icon
-                    |reddit
-        a.ui.card(href="/reddit")
-            .content 
-                .ui.icon.grey.header
-                    i.reddit.icon
-                    | reddit admin
         a.ui.card(href="/tasks")
             .content 
                 .ui.icon.grey.header
-                    i.tasks.icon
+                    i.grey.tasks.icon
                     |tasks
-        a.ui.card(href="/time_sessions")
+        a.ui.card(href="/time")
             .content 
                 .ui.icon.grey.header
-                    i.clock.icon
+                    i.grey.clock.icon
                     |time
         a.ui.card(href="/thoughts")
             .content 
                 .ui.icon.grey.header
-                    i.brain.icon
+                    i.grey.brain.icon
                     |thoughts
             
             
