--- a/parts/accounts/reset_password.jade
+++ b/parts/accounts/reset_password.jade
@@ -14,17 +14,17 @@ template(name='forgot_password')
                         | username
                     .ui.large.input(class=login_class)
                         input.username(type='text')
-                    .ui.circular.submit.button.submit_username submit
+                    .ui.submit.button.submit_username submit
                     .ui.header or
                     .ui.inline.header
                         //- +i name='email'
                         | email
                     .ui.labeled.large.input
                         input.email(type='email')
-                    .ui.circular.submit.button.submit_email submit
+                    .ui.submit.button.submit_email submit
                 if username
                     if logging_in
-                        .ui.fluid.large.circular.button.enter(title="Login #{username}" class=enter_class)
+                        .ui.fluid.large.button.enter(title="Login #{username}" class=enter_class)
                             |login '#{username}'
                             i.right.arrow.icon
                     else
@@ -32,10 +32,10 @@ template(name='forgot_password')
                             .ui.small.grey.header username "#{username}" not found
                             a(href='/register') register
                 .ui.center.aligned.basic.segment    
-                    a.ui.circular.big.basic.button(href='/login') 
+                    a.ui.big.basic.button(href='/login') 
                         //- +i name='enter-2' classes='ui mini inline image'
                         |login
-                    a.ui.circular.big.basic.button(href='/register')
+                    a.ui.big.basic.button(href='/register')
                         //- +i name='add-user-male' classes='ui mini inline image'
                         |register
 
