--- a/parts/maintenance/staff.jade
+++ b/parts/maintenance/staff.jade
@@ -72,7 +72,7 @@ template(name='staff')
                 .ui.basic.segment
                     each shift_walks
                         .ui.header #{when}
-                            i.remove.small.link.circular.icon.remove_walk(title='remove walk entry')
+                            i.remove.small.link.icon.remove_walk(title='remove walk entry')
                 if checklist_completed
                     //- +i name='todo-list' classes='ui inline image'
                     i.big.green.checkmark.icon
