--- a/parts/post.jade
+++ b/parts/post.jade
@@ -75,7 +75,7 @@ template(name='post_card')
             each five_tags
                 .ui.basic.label #{this}
             i.icon(class=icon)
-            a.ui.circular.icon.button.view(href="/post/#{_id}/view" title='view full')
+            a.ui.icon.button.view(href="/post/#{_id}/view" title='view full')
                 i.right.chevron.icon
 
 
@@ -89,13 +89,13 @@ template(name='post_cloud')
     //- i.grey.tags.icon
     //- .ui.inline.header tags
     if selected_post_tags
-        #clear_post_tags.ui.active.icon.circular.compact.button
+        #clear_post_tags.ui.active.icon.compact.button
             i.remove.icon
         each selected_post_tags
-            .unselect_post_tag.ui.active.circular.compact.button
+            .unselect_post_tag.ui.active.compact.button
                 strong #{this}
     each all_post_tags
-        .ui.compact.circular.button.select_post_tag(class=cloud_tag_class) 
+        .ui.compact.button.select_post_tag(class=cloud_tag_class) 
             strong #{this.name}
 
 
