--- a/parts/profile/member_profile.jade
+++ b/parts/profile/member_profile.jade
@@ -7,7 +7,7 @@ template(name='member_profile_layout')
                 //- img.ui.fluid.image.checkin_banner(src="{{c.url banner_image width=1000 height=1000 crop='crop'}}")
                 .four.wide.column
                     a.item.mobile.hidden(href="/member/#{user_from_username_param.username}/")
-                        img.ui.centered.circular.image(src="{{c.url profile_image_id height=300 width=300 gravity='face' crop='fill'}}")
+                        img.ui.centered.image(src="{{c.url profile_image_id height=300 width=300 gravity='face' crop='fill'}}")
                     .ui.center.aligned.basic.segment.mobile.hidden
                         a(href="/member/#{user.username}")
                             .ui.large.center.aligned.header
@@ -20,7 +20,7 @@ template(name='member_profile_layout')
                             |{{fixed user.credit}}
                     .ui.two.column.middle.aligned.grid.mobile.only
                         .column
-                            img.ui.circular.small.inline.image.mobile.only(src="{{c.url profile_image_id height=300 width=300 gravity='face' crop='fill'}}")
+                            img.ui.small.inline.image.mobile.only(src="{{c.url profile_image_id height=300 width=300 gravity='face' crop='fill'}}")
                         .column
                             .ui.inline.header
                                 strong #{user.name}
