--- a/client/buttons.jade
+++ b/client/buttons.jade
@@ -11,7 +11,7 @@ template(name='session_edit_button')
 
 
 template(name='detect')
-    .ui.icon.big.circular.button.detect_fields(title='detect fields')
+    .ui.icon.big.button.detect_fields(title='detect fields')
         i.dna.icon
         //- |Detect Fields
 
@@ -19,7 +19,7 @@ template(name='detect')
 template(name='session_edit_icon')
     if currentUser
         unless is_editing
-            i.pencil.link.circular.icon.edit_this(title=tags class=button_classes)
+            i.pencil.link.icon.edit_this(title=tags class=button_classes)
         else
             .save_doc.ui.icon.button(class=button_classes title='save')
                 i.green.check.icon
