--- a/client/styles.css
+++ b/client/styles.css
@@ -7,7 +7,7 @@ body {
     /*line-height: 200% !important;*/
     /* background: rgba(0,0,0,.9) !important; */
     /* filter: invert(.9) !important; */
-    background: rgba(200, 200, 200, .1) !important
+    background: rgba(200, 200, 200, .3) !important
     /* background: #0e0e44 !important; */
 }
 
@@ -105,11 +105,11 @@ body {
 }
 
 .youtube_view {
-    border-radius: 10px !important;
+    /* border-radius: 10px !important; */
 }
 
 .rounded {
-    border-radius: 10px !important;
+    /* border-radius: 10px !important; */
 }
 
 
@@ -169,11 +169,11 @@ body {
 .checkin_header {
     font-size: 4em !important;
 }
-.menu > .item {
+/* .menu > .item {
     border-radius:20px !important;
-}
+} */
 .ui.popup {
-    border-radius:10px !important;
+    /* border-radius:10px !important; */
 }
 /* .menu > .item:hover { */
     /* filter: drop-shadow(0px 0px 5px rgba(100,100,100,.9)) !important; */
@@ -206,7 +206,7 @@ body {
 }
 
 .menu {
-    border-radius: 10px !important;
+    /* border-radius: 10px !important; */
     transition: background-color 3s ease !important;
 }
 
@@ -215,11 +215,11 @@ body {
 } */
 
 .card {
-    border-radius:10px !important;
+    /* border-radius:10px !important; */
 }
 
 .image:not(.circular) {
-    border-radius:10px !important;
+    /* border-radius:10px !important; */
 }
 
 
@@ -248,7 +248,7 @@ body {
 }
 
 .accordion {
-    border-radius: 10px !important;
+    /* border-radius: 10px !important; */
     /* opacity: .8 !important; */
     background-color: rgba(255,255,255, 0.3) !important;
     padding:5px !important;
@@ -276,7 +276,7 @@ body {
   color: green;
   background-color: white;
   padding: 30px 30px;
-  border-radius: 10px;
+  /* border-radius: 10px; */
   font-size: 30px;
   line-height: 130%;
   font-weight: bold;
@@ -303,7 +303,7 @@ body {
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
     transition: all 0.5s ease;
-    border-radius: 10px !important;
+    /* border-radius: 10px !important; */
     margin: 0px !important;
 }
 
@@ -389,8 +389,8 @@ body {
 
 
 input:not(.no_format){
-    -webkit-border-radius: 10px !important; */
-    border-radius: 10px !important;
+    /* -webkit-border-radius: 10px !important; */ */
+    /* border-radius: 10px !important; */
     margin-bottom: 3px !important;
     margin-top: 3px !important;
     /* font-size: 120% !important; */
@@ -403,8 +403,8 @@ input:not(.no_format){
 }
 
 textarea{
-    -webkit-border-radius: 10px !important; */
-    border-radius: 10px !important;
+    /* -webkit-border-radius: 10px !important; */ */
+    /* border-radius: 10px !important; */
 }
 input.username_search{
     -webkit-border-radius: 25px !important; */
@@ -448,14 +448,14 @@ input.member_search{
     /* -moz-border-radius: 5px !important; */
     opacity:.9 !important;
     font-family: 'Ubuntu', sans-serif !important;
-    border-radius: 8px !important;
+    /* border-radius: 8px !important; */
 }
 
 .disabled.button, .disabled.segment, .disabled.label{
     /* -webkit-border-radius: 5px !important; */
     /* -moz-border-radius: 5px !important; */
     opacity:.4 !important;
-    border-radius: 10px !important;
+    /* border-radius: 10px !important; */
 }
 
 /* .segment {
@@ -476,7 +476,7 @@ input.member_search{
     font-size: 110% !important;
 
     /* background-color: rgba(250,250,250,1) !important; */
-    border-radius: 12px !important;
+    /* border-radius: 12px !important; */
     border: solid !important;
     border-width: 1px !important;
     border-color: lightgrey !important;
