--- a/parts/accounts/register.jade
+++ b/parts/accounts/register.jade
@@ -26,19 +26,19 @@ template(name='register')
                     input.password2(type='password')
                 if username
                     if registering
-                        .ui.fluid.large.circular.button.enter(class=enter_class)
+                        .ui.fluid.large.button.enter(class=enter_class)
                             i.user.plus.icon
                             |register '#{username}'
                     else
                         .ui.small.header username "#{username}" found
-                        a.ui.basic.circular.button(href='/login') login
+                        a.ui.basic.button(href='/login') login
                         
                         
                 .ui.center.aligned.basic.segment    
                     //- .ui.small.header By clicking Register, you agree to our 
                     //-     a(href='https://henry-health.com/privacy-policy/' target="_window") Privacy Policy
                     .ui.small.header or
-                        a.ui.circular.basic.sign.in.button(href='/login') 
+                        a.ui.basic.sign.in.button(href='/login') 
                             |login
                             i.right.chevron.icon
                     
