--- a/parts/maintenance/healthclub.jade
+++ b/parts/maintenance/healthclub.jade
@@ -11,7 +11,7 @@ template(name='healthclub')
         //- .row
         //-     .six.wide.center.aligned.column
         if rick_mode
-            img.ui.small.centered.circular.image(src="{{c.url 'gold_run_logo' }}")
+            img.ui.small.centered.image(src="{{c.url 'gold_run_logo' }}")
         .row
             .sixteen.wide.center.aligned.column
                 .ui.big.fluid.left.icon.input
@@ -26,7 +26,7 @@ template(name='healthclub')
                     //- .row.checkin_toprow
                     //-     .sixteen.wide.column
                     //-         //- .two.wide.column
-                    //-         //-     img.ui.circular.centered.small.inline.image.shadowed(src="{{c.url 'gold_run_logo' }}")
+                    //-         //-     img.ui.centered.small.inline.image.shadowed(src="{{c.url 'gold_run_logo' }}")
                     //-         //- .fourteen.wide.column
                     //-         .ui.massive.fluid.left.icon.input
                     //-             input.username_search(type='text' placeholder='resident first or last name' autofocus)
